--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="title_activity_previous">Previous</string>
     <string name="title_activity_others">Others</string>
     <string name="title_activity_guide">Guide</string>
+    <string name="title_activity_welcome">Welcome</string>
 
 </resources>
