--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_others">Others</string>
     <string name="title_activity_guide">Guide</string>
     <string name="title_activity_welcome">Welcome</string>
+    <string name="title_activity_search">Search</string>
 
 </resources>
