--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_request">Request</string>
+    <string name="title_activity_logout">Logout</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_profile">Profile</string>
     <string name="action_settings">Settings</string>
